Designer 2.14.0 (2013-XX-XX Markab)
===================================

 New Features:

   - EnOcean configuration (Rainer Hitz, MODELER-470)
   - Round-robin database (RRD) configuration (MODELER-394)
   - Add web view widget (MODELER-248, MODELER-384, MODELER-395)
   - Add color picker widget (MODELER-333, MODELER-384)
   - Add polling interval and regex attributes to ShellExe
     protocol (MODELER-463, Marcus Redeker)
   - Add polling interval to telnet protocol (MODELER-464,
     Marcus Redeker)
   - Add IP address to Samsung SmartTV protocol, enabling
     use of multiple devices (MODELER-465, Ivan Martinez)


 Fixes:

   - Fixes to image asset manager (Eric Bariaux, related 
     to MODELER-292)
   - MODELER-302, MODELER-385: List of widgets does not 
     scroll anymore, double scrollbar on widget selection
     (Eric Bariaux)
   - MODELER-304, MODELER-334: UI elements (from panels.obj) 
     restored on login and not when UI designer pane is 
     displayed. "Please wait" message on login only dismissed 
     when UI has been built and initialized. (Eric Bariaux)
   - MODELER-391: Add Domintell connection configuration
     (Eric Bariaux)


 Internal:

  - Image Asset Picker converted to GXT3 (Eric Bariaux, MODELER-330)
  - Hibernate lazy initialization errors on device attributes, 
    correct handling of sensor ID assignments in transactions
    (Eric Bariaux, MODELER-389, MODELER-396)
  

Designer 2.13.9 (2013-03-30 Rosemary)
=====================================

Bug fix release:

  - MODELER-346: regexp validation for IP fields in TCP
    and Telnet protocols were wrong. Validations have
    been disabled (Juha Lindfors)
  - MODELER-348: Prevent caching of GWT Javascript files
    on client browser to avoid Javascript conflicts when
    upgrading to a newer Designer version (Eric Bariaux)
  - MODELER-360: Encoding of restricted characters in XML
    is now done properly for user entered names for 
    commands, switches, sensors, etc. (Eric Bariaux)
