@@ -5,7 +5,8 @@ Designer 2.14.0 (2013-XX-XX Markab)
 
    - EnOcean configuration (Rainer Hitz, MODELER-470)
    - Round-robin database (RRD) configuration (MODELER-394)
-   - Add web view widget (MODELER-248, MODELER-384, MODELER-395)
+   - Add web view widget (MODELER-248, MODELER-384, MODELER-395,
+     MODELER-398)
    - Add color picker widget (MODELER-333, MODELER-384)
    - Add polling interval and regex attributes to ShellExe
      protocol (MODELER-463, Marcus Redeker)
